@@ -82,7 +82,8 @@ install:
 	  $(wildcard _build/src/*.so) \
 	  $(wildcard _build/src/*.a) \
 	  $(wildcard _build/src/toplevel.top) \
-	  _build/syntax/pa_lwt.cmo
+	  _build/syntax/pa_lwt.cmo \
+	  _build/syntax/pa_log.cmo
 
 uninstall:
 	$(OCAMLFIND) remove $(NAME) -destdir "$(DESTDIR)"
